[gd_scene load_steps=11 format=3 uid="uid://c5ge5rsosa2c8"]

[ext_resource type="Script" uid="uid://cxlqobq831x1c" path="res://player.gd" id="1_wexkc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y50x7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_forward"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_up"]
size = Vector2(10, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_down"]
size = Vector2(10, 20)

[sub_resource type="Animation" id="Animation_Attack_Down"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DownAttack/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DownAttack/HitboxVisual:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_Attack_Forward"]
resource_name = "attack_forward"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForwardAttack/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForwardAttack/HitboxVisual:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_Attack_Up"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpAttack/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpAttack/HitboxVisual:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_attacks"]
_data = {
&"attack_down": SubResource("Animation_Attack_Down"),
&"attack_forward": SubResource("Animation_Attack_Forward"),
&"attack_up": SubResource("Animation_Attack_Up")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_wexkc")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(10, 0, 7.071, 7.071, 0, 10, -7.071, 7.071, -10, 0, -7.071, -7.071, 0, -10, 7.071, -7.071)

[node name="Eye" type="Polygon2D" parent="Polygon2D"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(3, -3, 6, -3, 6, 3, 3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y50x7")

[node name="ForwardAttack" type="Area2D" parent="."]
position = Vector2(20, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForwardAttack"]
shape = SubResource("RectangleShape2D_forward")
disabled = true

[node name="HitboxVisual" type="Polygon2D" parent="ForwardAttack"]
visible = false
z_index = 1
color = Color(1, 1, 0, 0.501961)
polygon = PackedVector2Array(-10, -5, 10, -5, 10, 5, -10, 5)

[node name="UpAttack" type="Area2D" parent="."]
position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpAttack"]
shape = SubResource("RectangleShape2D_up")
disabled = true

[node name="HitboxVisual" type="Polygon2D" parent="UpAttack"]
visible = false
z_index = 1
color = Color(1, 1, 0, 0.501961)
polygon = PackedVector2Array(-5, -10, 5, -10, 5, 10, -5, 10)

[node name="DownAttack" type="Area2D" parent="."]
position = Vector2(0, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownAttack"]
shape = SubResource("RectangleShape2D_down")
disabled = true

[node name="HitboxVisual" type="Polygon2D" parent="DownAttack"]
visible = false
z_index = 1
color = Color(1, 1, 0, 0.501961)
polygon = PackedVector2Array(-5, -10, 5, -10, 5, 10, -5, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_attacks")
}

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ForwardAttack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="UpAttack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="DownAttack" to="." method="_on_attack_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
